# CSArchProg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE.txt  README.md  docker-compose.yml  http_client.sh  http_server.sh
.github/workflows/: cmake-single-platform.yml
src/Client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
src/Server/: CMakeLists.txt  GlobalDefinitions.hpp  GlobalErrors.cpp  GlobalErrors.hpp  main.cpp
src/Server/Api/: HTTPServer.cpp  HTTPServer.hpp  Routers.cpp  Routers.hpp
src/Server/JsonCast/: JsonCast.cpp  JsonCast.hpp
src/Server/Users/: User.cpp  User.hpp  UsersStorage.cpp  UsersStorage.hpp
src/Utility/: Utility.cpp  Utility.hpp
tests/Client/: CMakeLists.txt  main.cpp
tests/Server/: CMakeLists.txt  main.cpp
